portable reactor fuel

--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -10,3 +10,5 @@
 [item-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
 	
+[fuel-category-name]
+	fusion=Fusion fuel
