Updating crushers, adding locale

--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -1,14 +1,27 @@
 [entity-name]
 	kr-sentinel=Sentinel
-
+	y_crusher=Electric Crusher
+	crusher_0=Burner Crusher
 [entity-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
-	
+	y_crusher=Electric Crusher
+	crusher_0=Burner Crusher
 [item-name]
 	kr-sentinel=Sentinel
-	
+	y_crusher=Electric Crusher
+	crusher_0=Burner Crusher
 [item-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
-	
+	y_crusher=Crushes stone and minerals into powder form substances using electric energy
+	crusher_0=Crushes stone and minerals into powder form substances using chemical fuel energy
 [fuel-category-name]
 	fusion=Fusion fuel
+
+[technology-name]
+	crusher=Electric Crusher
+	kr-quarry-minerals-extraction=Immersite raw processing
+	kr-imersium-processing=Immersite high-level processing
+
+[technology-description]
+	kr-quarry-minerals-extraction=Extracting and raw processing of immersite
+	crusher=Twice more efficient Electric Crusher to replace basic Burner Crusher
