fixed En locale

--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -1,27 +1,71 @@
+[autoplace-control-names]
+imersite=__ITEM__imersite__
+mineral-water=Mineral water
+rare-metals=__ITEM__rare-metals__
+
+
+
 [entity-name]
+	imersite=Imersite cave
+	mineral-water=Mineral water
+	rare-metals=__ITEM__rare-metals__
 	kr-sentinel=Sentinel
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
+	kr-bio-lab=Bio lab
+	kr-mineral-water-pumpjack=Mineral water pumpjack
+	kr-oil-pumpjack=Oil pumpjack
+	kr-quarry-drill=Quarry drill
+
 [entity-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
+	
 [item-name]
 	kr-sentinel=Sentinel
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
+	rare-metals=Rare metals
+	raw-imersite=Raw imersite
+	raw-rare-metals=Raw rare metals
+	imersite-crystal=Imersite crystal
+	imersite=Imersite
+	imersite-powder=Imersite powder
+	imersium-beam=Imersium beam
+	imersium-plate=Imersium plate
+	rare-metals=Rare metals
+	raw-imersite=Raw imersite
+	raw-rare-metals=Raw rare metals
+
 [item-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
 	y_crusher=Crushes stone and minerals into powder form substances using electric energy
 	crusher_0=Crushes stone and minerals into powder form substances using chemical fuel energy
+	imersium-plate=Advanced alloy of rare metals fused with imersite. This alloy is able to withstand colossal temperatures and has unparalleled strength.
+
 [fuel-category-name]
 	fusion=Fusion fuel
+[fluid-name]
+mineral-water=Mineral water
 
 [technology-name]
 	crusher=Electric Crusher
-	kr-quarry-minerals-extraction=Immersite raw processing
-	kr-imersium-processing=Immersite high-level processing
+	kr-quarry-minerals-extraction=Quarry Immersite raw mineral extraction
+	kr-imersium-processing=Immersium high-level processing
+	kr-imersite-night-vision-equipment=Imersite nightvision
+	kr-imersite-solar-panel-equipment=Portable imersite solar panels
+	kr-mineral-water-gathering=Mineral water extraction
+	kr-sentinel=__ENTITY__kr-sentinel__
+	kr-mineral-water-gathering=Mineral water extraction
 
 [technology-description]
-	kr-quarry-minerals-extraction=Extracting and raw processing of immersite
+	kr-imersium-processing=An exceptionally stiff, very light, and highly conductive alloy. Its high melting point and advanced chemical composition make it extremely capable, but very slow to produce.
+	kr-mineral-water-gathering=A specialized pumpjack for extracting mineral water.
+	kr-quarry-minerals-extraction=Enables the extraction and basic processing of raw imersite.
+	kr-sentinel=Continuously monitors a small area.
 	crusher=Twice more efficient Electric Crusher to replace basic Burner Crusher
+
+
+[recipe-name]
+	imersite-crystal-to-dust=Crush __ITEM__imersite-crystal__
