Fire torch parts added to ease FlameTurret recipe

--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -24,6 +24,7 @@ rare-metals=__ITEM__rare-metals__
 	
 [item-name]
 	kr-sentinel=Sentinel
+	fire-torch-parts=Fire blow torch parts
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
 	imersite-crystal=Imersite crystal
@@ -37,6 +38,7 @@ rare-metals=__ITEM__rare-metals__
 
 [item-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
+	fire-torch-parts=Flame blow torch components for flame turrets and flame thrower
 	y_crusher=Crushes stone and minerals into powder form substances using electric energy
 	crusher_0=Crushes stone and minerals into powder form substances using chemical fuel energy
 	imersium-plate=Advanced alloy of rare metals fused with imersite. This alloy is able to withstand colossal temperatures and has unparalleled strength.
