--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -56,7 +56,7 @@ mineral-water=Mineral water
 	kr-imersite-solar-panel-equipment=Portable imersite solar panels
 	kr-mineral-water-gathering=Mineral water extraction
 	kr-sentinel=__ENTITY__kr-sentinel__
-	toolbelt-extended=Toolbelt extension
+	toolbelt-extended=Backpacks for new resources
 
 
 [technology-description]
@@ -65,7 +65,7 @@ mineral-water=Mineral water
 	kr-quarry-minerals-extraction=Enables the extraction and basic processing of raw imersite.
 	kr-sentinel=Continuously monitors a small area.
 	crusher=Twice more efficient Electric Crusher to replace basic Burner Crusher.
-	toolbelt-extended=Toolbelt extension for managing additional resources.
+	toolbelt-extended=Toolbelt extension for handling additional resources.
 
 [recipe-name]
 	imersite-crystal-to-dust=Crush __ITEM__imersite-crystal__
