sentinel mk2; turretpod support; el crusher icon change; military nerfs moved out to MilitaryNerf

--- a/locale/en/SpaceG.cfg
+++ b/locale/en/SpaceG.cfg
@@ -10,6 +10,7 @@ rare-metals=__ITEM__rare-metals__
 	mineral-water=Mineral water
 	rare-metals=__ITEM__rare-metals__
 	kr-sentinel=Sentinel
+	kr-sentinel2=Advanced Sentinel
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
 	kr-bio-lab=Bio lab
@@ -19,11 +20,13 @@ rare-metals=__ITEM__rare-metals__
 
 [entity-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
+	kr-sentinel2=Advanced scanning abilities with low energy consumption.
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
 	
 [item-name]
 	kr-sentinel=Sentinel
+	kr-sentinel2=Advanced Sentinel
 	fire-torch-parts=Fire blow torch parts
 	y_crusher=Electric Crusher
 	crusher_0=Burner Crusher
@@ -38,6 +41,7 @@ rare-metals=__ITEM__rare-metals__
 
 [item-description]
 	kr-sentinel=Constantly gives visibility over a small area without scanning its surroundings.
+	kr-sentinel2=Advanced scanning abilities with low energy consumption.
 	fire-torch-parts=Flame blow torch components for flame turrets and flame thrower
 	y_crusher=Crushes stone and minerals into powder form substances using electric energy
 	crusher_0=Crushes stone and minerals into powder form substances using chemical fuel energy
@@ -56,6 +60,7 @@ mineral-water=Mineral water
 	kr-imersite-solar-panel-equipment=Portable imersite solar panels
 	kr-mineral-water-gathering=Mineral water extraction
 	kr-sentinel=__ENTITY__kr-sentinel__
+	kr-sentinel2=__ENTITY__kr-sentinel2__
 	toolbelt-extended=Backpacks for new resources
 
 
@@ -64,6 +69,7 @@ mineral-water=Mineral water
 	kr-mineral-water-gathering=A specialized pumpjack for extracting mineral water.
 	kr-quarry-minerals-extraction=Enables the extraction and basic processing of raw imersite.
 	kr-sentinel=Continuously monitors a small area.
+	kr-sentinel2=Advanced nano process and ancient knowledge of this plant, which has no fog of war
 	crusher=Twice more efficient Electric Crusher to replace basic Burner Crusher.
 	toolbelt-extended=Toolbelt extension for handling additional resources.
 
