polluted chunks processor prototype

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "data",
         "mods",
         "global",
-        "game"
+        "game",
+        "event",
+        "script",
+        "defines"
     ]
 }
